[package]
name = "ginger-auth-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ginger-auth-proxy"
path = "src/main.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14", features = ["full"] }
hyper-reverse-proxy = "0.5"
bytes = "1"