[package]
name = "ginger-auth-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ginger-auth-proxy"
path = "src/main.rs"

[dependencies]
# ── HTTP stack (hyper 1.0) ────────────────────────────────────────────────────
hyper          = { version = "1", features = ["full"] }
hyper-util     = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes          = "1"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Web framework (warp 0.4 targets hyper 1.0; "server" feature for warp::serve) ──
warp = { version = "0.4", features = ["server"] }

# ── Auth / serialisation ──────────────────────────────────────────────────────
jsonwebtoken = "9"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# ── Observability ─────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Config ────────────────────────────────────────────────────────────────────
dotenvy = "0.15"

# ── Removed ───────────────────────────────────────────────────────────────────
# hyper = "0.14"              →  hyper 1
# warp  = "0.3"               →  warp 0.4 (hyper 1.0 native)
# hyper-reverse-proxy = "0.5" →  replaced by inline reverse_proxy() in main.rs