[package]
name = "ginger-auth-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ginger-auth-proxy"
path = "src/main.rs"

[dependencies]
# ── HTTP stack (hyper 1.0) ────────────────────────────────────────────────────
hyper          = { version = "1", features = ["full"] }
hyper-util     = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes          = "1"
hyper-rustls   = { version = "0.27", features = ["native-tokio", "http1", "http2", "rustls-native-certs", "ring"] }
rustls         = { version = "0.23", default-features = false, features = ["ring", "tls12"] }

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# ── Web framework ─────────────────────────────────────────────────────────────
axum = { version = "0.7", features = ["http1", "http2", "macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace"] }

# ── Auth / serialisation ──────────────────────────────────────────────────────
jsonwebtoken = "9"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# ── Observability ─────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Config ────────────────────────────────────────────────────────────────────
dotenvy = "0.15"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

